--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,12 @@ jobs:
         with:
           name: artifact
           path: dist
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Get Artifact
+        uses: action/download-artifact@v1
+        with:
+          name: artifact
+          path: dist
