--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: artifact
-          path: dist
+      - name: Display structure of downloaded files
+        run: ls -R
