--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,4 @@ jobs:
         run: ls -R
       - name: Copy Artifact
         run: cp artifact my-new-artifact
+        working-directory: artifact
