--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: artifact
+          path: artifact
       - name: Display structure of downloaded files
         run: ls -R
       - name: Copy Artifact
