--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: artifact{{ env.sha }}
+          name: artifact${{ env.sha }}
           path: dist
   deploy:
     runs-on: ubuntu-latest
@@ -30,7 +30,7 @@ jobs:
       - name: Get Artifact
         uses: actions/download-artifact@v4
         with:
-          name: artifact{{ env.sha }}
+          name: artifact${{ env.sha }}
           path: artifact
       - name: Display structure of downloaded files
         run: ls -R
