--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: artifact${{ env.sha }}
-          path: artifact
+          path: artifact${{ env.sha }}
       - name: Display structure of downloaded files
         run: ls -R
       - name: Copy Artifact
